# Custom-3D-Game-Engine

./: CMakeLists.txt
engine/: CMakeLists.txt
engine/source/: Application.cpp  Application.h  Engine.cpp  Engine.h  eng.h
engine/source/graphics/: GraphicsAPI.cpp  GraphicsAPI.h  ShaderProgram.cpp  ShaderProgram.h
engine/source/input/: InputManager.cpp  InputManager.h
engine/source/render/: Material.cpp  Material.h
source/: Game.cpp  Game.h  main.cpp
